# ChangeLog for net-im/kadu-jabber_protocol
# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*kadu-jabber_protocol-4.0_beta1 (19 May 2016)

  19 May 2016; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-jabber_protocol-4.0_beta1.ebuild:
  Bumped.

*kadu-jabber_protocol-4.0_alpha1 (10 Apr 2016)

  10 Apr 2016; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-jabber_protocol-4.0_alpha1.ebuild:
  Bumped.

*kadu-jabber_protocol-3.0 (13 Feb 2016)

  13 Feb 2016; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-jabber_protocol-3.0.ebuild:
  Bumped.

*kadu-jabber_protocol-3.0_rc5 (31 Jan 2016)

  31 Jan 2016; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-jabber_protocol-3.0_rc5.ebuild:
  Bumped.

*kadu-jabber_protocol-3.0_rc4 (23 Jan 2016)

  23 Jan 2016; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-jabber_protocol-3.0_rc4.ebuild:
  Bumped.

*kadu-jabber_protocol-3.0_rc3 (16 Jan 2016)

  16 Jan 2016; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-jabber_protocol-3.0_rc3.ebuild:
  Bumped.

*kadu-jabber_protocol-3.0_rc2 (03 Jan 2016)

  03 Jan 2016; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-jabber_protocol-3.0_rc2.ebuild:
  Bumped.

*kadu-jabber_protocol-3.0_rc1 (16 Dec 2015)

  16 Dec 2015; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-jabber_protocol-3.0_rc1.ebuild:
  Bumped.

  29 Mar 2015; Michał Ziąbkowski <mziab@o2.pl>
  kadu-jabber_protocol-3.0_beta1.ebuild,
  +files/kadu-jabber_protocol-3.0_beta1-qxmpp-path.patch:
  Fixed patch and qxmpp dep.

*kadu-jabber_protocol-3.0_beta1 (29 Mar 2015)

  29 Mar 2015; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-jabber_protocol-3.0_beta1.ebuild:
  Bumped.

  24 Mar 2015; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-jabber_protocol-2.1.ebuild:
  Bumped.

*kadu-jabber_protocol-2.1 (24 Mar 2015)

  24 Mar 2015; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-jabber_protocol-2.1.ebuild:
  Bumped.

*kadu-jabber_protocol-3.0_alpha2-r1 (10 Mar 2015)

  10 Mar 2015; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-jabber_protocol-3.0_alpha2.ebuild,