@@ -2,6 +2,12 @@
 # Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*kadu-jabber_protocol-4.1-r1 (01 Dec 2016)
+
+  01 Dec 2016; Michał Ziąbkowski <mziab@o2.pl>
+  +kadu-jabber_protocol-4.1-r1.ebuild:
+  Fixed qca2 dep.
+
 *kadu-jabber_protocol-4.0_beta1 (19 May 2016)
 
   19 May 2016; Michał Ziąbkowski <mziab@o2.pl>
